[settings] Fix cropped focus ring for "Add folder..." button.
Before: https://imgur.com/JSrYzfv.png
After: https://imgur.com/NqRd2V2.png
Fixed: 350667494
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5749081
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/models/persistence/workspaceSettingsTab.css
+++ b/front_end/models/persistence/workspaceSettingsTab.css
@@ -100,6 +100,7 @@
 .workspace-settings-tab .settings-tab.settings-content.settings-container {
   column-width: initial;
   overflow: hidden;
+  padding-bottom: 1px;
   padding-right: 10px;
 
   > devtools-button {
